feat: Complete PDP hero layout overhaul with unified container design
- Unified details panel and thumbnails into single glassmorphic container
- Added stacked product titles with enhanced typography and visibility
- Implemented 'Select Flavor' header section with premium styling
- Optimized container proportions and spacing for full title readability
- Enhanced thumbnail layout with proper image/text balance (50%/50%)
- Improved responsive scaling across all screen sizes
- Maintained ultra-luxury aesthetic with dynamic color theming
- Fixed layout constraints and proper flex distribution
- Added comprehensive spacing adjustments for visual hierarchy

--- a/package.json
+++ b/package.json
@@ -10,21 +10,20 @@
     "preview": "shopify hydrogen preview --build",
     "lint": "eslint --no-error-on-unmatched-pattern .",
     "typecheck": "tsc --noEmit",
-    "codegen": "shopify hydrogen codegen",
-    "ban:words": "node scripts/ban-words.js"
+    "codegen": "shopify hydrogen codegen"
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@shopify/hydrogen": "2025.5.0",
     "@shopify/remix-oxygen": "^3.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "framer-motion": "^12.23.22",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^5.1.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "7.6.0",
-    "react-router-dom": "7.6.0",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
